tests/fixtures/pass/exit_42.sc
let main(): i32 = { 42 }
