tests/fixtures/fail/inherent_unknown_target.sc
extend Missing {
  let answer = 42
}

let main(): i32 = { 0 }
